--- a/Views/adminViews/updateBanner.ejs
+++ b/Views/adminViews/updateBanner.ejs
@@ -49,11 +49,11 @@
 
       <div class="form-group">
         <label for="productImage">Banner Image:</label>
-        <input type="file" class="form-control" name="image" id="image" required> 
+        <input type="file" class="form-control" name="bimage" id="bimage"> 
       </div>
 
       <input type="hidden" name="id" value="<%= banner[0]._id %>">
-
+ 
       <% if (typeof message !== 'undefined') { %>
         <center>
         <div class="audun_warn">
