--- a/Views/userViews/editProfile.ejs
+++ b/Views/userViews/editProfile.ejs
@@ -15,11 +15,9 @@
     <!-- meta character set -->
     <meta charset="UTF-8">
     <!-- Site Title -->
-    <title>Karma Shop</title>
+    <title>ProGear</title>
 
-    <!--
-            CSS
-            ============================================= -->
+    <!--CSS -->
     <link rel="stylesheet" href="css/linearicons.css">
     <link rel="stylesheet" href="css/owl.carousel.css">
     <link rel="stylesheet" href="css/font-awesome.min.css">
@@ -31,15 +29,6 @@
 </head>
 
 <body>
-
-    <!-- Start Header Area -->
-
-
-	<!-- End Header Area -->
-
-    <!-- Start Banner Area -->
-
-<!-- End Banner Area -->
 
 <!--================Tracking Box Area =================-->
 <section class="tracking_box_area section_gap">
@@ -80,8 +69,6 @@
   </div>
 </section>
 
-    <!--================End Tracking Box Area =================-->
-
     <!-- start footer Area -->
        <%- include('../layouts/userFooter.ejs') %>
 
@@ -105,51 +92,6 @@
 	<script src="js/gmaps.min.js"></script>
 	<script src="js/main.js"></script>
 
-  <!-- <script>
-		document.getElementById('verifyOtpBtn').addEventListener('click', async () => {
-			event.preventDefault(); // Prevent form submission
-			const otp = document.querySelector('input[name="otp"]').value;
-
-			try {
-				const response = await fetch('/verifyOTP', {
-					method: 'POST',
-					headers: {
-						'Content-Type': 'application/json'
-					},
-					body: JSON.stringify({ otp })
-				});
-
-				const data = await response.json();
-
-				if (response.ok) {
-					// Handle successful response
-					var otpbutton = document.querySelector('button.register1#sendOtpBtn');
-					otpbutton.style.display = 'none';
-
-					var button = document.querySelector('button.register2#verifyOtpBtn');
-					button.disabled = true;
-					button.innerHTML = 'Verified';
-					button.style.padding = '5px 21px'
-					button.style.backgroundColor = 'green';
-					button.style.color = 'white';
-
-
-					document.getElementById('success-message').textContent = data.message;
-					setTimeout(function () {
-						document.getElementById('success-message').textContent = '';
-					}, 3000);
-				} else {
-					// Handle error response
-					document.getElementById('error-message').textContent = data.message;
-					setTimeout(function () {
-						document.getElementById('error-message').textContent = '';
-					}, 3000);
-				}
-			} catch (error) {
-				console.log('An error occurred:', error.message);
-			}
-		});
-	</script> -->
 </body>
 
 </html>
